--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
     "next": "^10.2.0",
+    "next-seo": "^4.24.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
