--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.14.0",
     "@chakra-ui/icons": "^1.0.6",
     "@chakra-ui/react": "^1.6.0",
     "@chakra-ui/theme-tools": "^1.1.0",
@@ -22,7 +23,9 @@
     "next": "^10.2.0",
     "next-seo": "^4.24.0",
     "nprogress": "^0.2.0",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "devDependencies": {}
 }
