--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nprogress": "^0.2.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-vertical-timeline-component": "^3.3.3"
   },
   "devDependencies": {}
 }
