--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^10.2.0",
     "next-seo": "^4.24.0",
+    "nodemailer": "^6.6.0",
     "nprogress": "^0.2.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
