--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.11.8",
     "airtable": "^0.11.0",
+    "cors": "^2.8.5",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
     "jsonwebtoken": "^8.5.1",
