--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@chakra-ui/theme-tools": "^1.1.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/caveat": "^4.3.0",
+    "@fontsource/merriweather": "^4.3.0",
+    "@fontsource/merriweather-sans": "^4.3.0",
+    "@fontsource/yeseva-one": "^4.3.0",
     "@supabase/supabase-js": "^1.11.8",
     "airtable": "^0.11.0",
     "focus-visible": "^5.2.0",
@@ -27,6 +31,7 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-vertical-timeline-component": "^3.3.3"
   },
   "devDependencies": {}
