--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^4",
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
+    "markdown-to-jsx": "^7.1.3",
     "next": "^10.2.0",
     "next-seo": "^4.24.0",
     "nodemailer": "^6.6.0",
