--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
+    "react-syntax-highlighter": "^15.4.3",
     "react-vertical-timeline-component": "^3.3.3"
   },
   "devDependencies": {}
