--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "airtable": "^0.11.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
+    "gray-matter": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
     "markdown-to-jsx": "^7.1.3",
@@ -25,6 +26,7 @@
     "next-seo": "^4.24.0",
     "nodemailer": "^6.6.0",
     "nprogress": "^0.2.0",
+    "octokit": "^1.1.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
