--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@hypertheme-editor-pro:registry=https://npm.hyperthe.me
-registry=https://registry.npmjs.com
+# @hypertheme-editor-pro:registry=https://npm.hyperthe.me
+# registry=https://registry.npmjs.com
