--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-seo": "^4.24.0",
     "nodemailer": "^6.6.0",
     "nprogress": "^0.2.0",
+    "number-to-words": "^1.2.4",
     "octokit": "^1.1.0",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
