--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@supabase/supabase-js": "^1.11.8",
+    "@vercel/analytics": "^1.0.1",
     "airtable": "^0.11.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
